frontend/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_tcp
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      response_headers_to_add:
                        - header:
                            key: alt-svc
                            value: h3=":443"; ma=86400, h3-29=":443"; ma=86400
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/admin"
                          direct_response:
                            status: 403
                            body:
                              inline_string: "Forbidden"
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: "/run/secrets/cert"
                    private_key:
                      filename: "/run/secrets/cert.key"
                alpn_protocols: "h2,http/1.1"
    - name: listener_udp
      address:
        socket_address:
          protocol: UDP
          address: 0.0.0.0
          port_value: 443
      udp_listener_config:
        quic_options: { }
        downstream_socket_config:
          prefer_gro: true
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: HTTP3
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/admin"
                          direct_response:
                            status: 403
                            body:
                              inline_string: "Forbidden"
                        - match:
                            prefix: "/"
                          route:
                            cluster: backend
                http3_protocol_options:
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.quic
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
              downstream_tls_context:
                common_tls_context:
                  tls_certificates:
                    - certificate_chain:
                        filename: "/run/secrets/cert"
                      private_key:
                        filename: "/run/secrets/cert.key"

  clusters:
    - name: backend
      connect_timeout: 30s
      type: STRICT_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 8080
